unpackaged/main/default/objects/PKB_Featured__c/fields/Article_Number__c.field-meta.xml
<CustomField>
    <fullName>Article_Number__c</fullName>
    <description>The article number of the article being linked to as a keyword or featured article. Not the same as the Article or Knowledge Article Version record ID.</description>
    <inlineHelpText>The article number of the article being linked to as a keyword or featured article. Not the same as the Article or Knowledge Article Version record ID.</inlineHelpText>
    <label>Article Number</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>