unpackaged/main/default/objects/PKB_Featured__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Concept Coach</fullName>
            </value>
            <value>
                <fullName>Tutor</fullName>
            </value>
            <value>
                <fullName>CNX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>