unpackaged/main/default/objects/PKB_Featured__c/fields/Is_Keyword_Article__c.field-meta.xml
<CustomField>
    <fullName>Is_Keyword_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if this article is linked to a keyword. When checked, this article will not appear in the Featured Articles section of the PKB and will instead appear as a Recommended article whenever the keyword(s) specified on this record are searched for.</description>
    <inlineHelpText>Check this field if this article is linked to a keyword. When checked, this article will not appear in the Featured Articles section of the PKB and will instead appear as a Recommended article whenever the keyword(s) specified on this record are searched</inlineHelpText>
    <label>Is Keyword Article?</label>
    <type>Checkbox</type>
</CustomField>