unpackaged/main/default/objects/PKB_Featured__c/fields/PKB_Name__c.field-meta.xml
<CustomField>
    <fullName>PKB_Name__c</fullName>
    <description>This must match one of the API names of the Sites that are configured to use the PKB package.</description>
    <inlineHelpText>This must match one of the API names of the Sites that are configured to use the PKB package.</inlineHelpText>
    <label>PKB Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>