unpackaged/main/default/objects/PKB_Featured__c/fields/Program_Category__c.field-meta.xml
<CustomField>
    <fullName>Program_Category__c</fullName>
    <formula>'Products:' + SUBSTITUTE(TEXT(Category__c), ' ', '_')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Category</label>
    <type>Text</type>
</CustomField>