unpackaged/main/default/objects/PKB_Featured__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Article_Number__c</columns>
    <columns>Expiration__c</columns>
    <columns>Category__c</columns>
    <columns>Keyword__c</columns>
    <columns>PKB_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>