unpackaged/main/default/objects/PKB_Featured__c/listViews/Concept_Coach.listView-meta.xml
<ListView>
    <fullName>Concept_Coach</fullName>
    <columns>NAME</columns>
    <columns>Article_Number__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Concept Coach</value>
    </filters>
    <label>Concept Coach</label>
</ListView>