unpackaged/main/default/objects/PKB_Featured__c/listViews/OpenStax.listView-meta.xml
<ListView>
    <fullName>OpenStax</fullName>
    <columns>NAME</columns>
    <columns>PKB_Name__c</columns>
    <columns>Article_Number__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>College</value>
    </filters>
    <label>OpenStax</label>
</ListView>