unpackaged/main/default/objects/PKB_Featured__c/listViews/Tutor.listView-meta.xml
<ListView>
    <fullName>Tutor</fullName>
    <columns>NAME</columns>
    <columns>Article_Number__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Tutor</value>
    </filters>
    <label>Tutor</label>
</ListView>